[package]
name = "rustproxygen"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rustproxygen"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
version = "0.52"
features = [
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
]

[dependencies]
bytemuck = "1.14.2"

[dependencies.clap]
version = "4.4.11"
features = ["derive"]

[dependencies.aes-gcm]
version = "0.10.3"