[package]
name = "DLLNAME"
version = "123.0.1"
edition = "2021"
build = "build.rs"

[package.metadata.winresource]
LegalCopyright = "License: MPL2"
OriginalFilename = "ORIGINAL.dll"
LegalTrademarks = "SOMETHING"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
winresource = "0.1.17"

[dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Threading"
]

[dependencies.aes-gcm]
version = "0.10.3"